force-app/main/default/objects/Tournament__c/Tournament__c.object-meta.xml
<CustomObject>
    <label>Tournament</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Tournament ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tournaments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>