force-app/main/default/objects/Tournament__c/fields/End_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Date_and_Time__c</fullName>
    <label>End Date and Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>