force-app/main/default/objects/Tournament__c/fields/Start_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_and_Time__c</fullName>
    <label>Start Date and Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>