force-app/main/default/objects/Tournament__c/validationRules/Must_Be_After_Start_Date_and_Time.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_Be_After_Start_Date_and_Time</fullName>
    <active>true</active>
    <description>End date must be after start date.</description>
    <errorConditionFormula>End_Date_and_Time__c  &lt;=  Start_Date_and_Time__c</errorConditionFormula>
    <errorDisplayField>End_Date_and_Time__c</errorDisplayField>
    <errorMessage>End date must be after start date.</errorMessage>
</ValidationRule>